# Formula-One-Strategy-Sim

./: .gitignore  ASSUMPTIONS_AND_LIMITS.md  EVAL_PLAN.md  EVAL_PLAN_v2.md  MODEL_INTERFACE_SPEC.md  PROJECT_SPEC.md  PROJECT_SPEC_v2.md  README.md  TASK_BOARD.md  TASK_BOARD_v2.md  app.py  pyproject.toml
.github/workflows/: ci.yml
src/f1sim/: __init__.py  __main__.py  assumptions.py  contracts.py  domain.py  explainer.py  features.py  recommend.py  replay.py  replaydb.py  strategy.py
src/f1sim/demo/: __init__.py  monza_2023.py  report_html.py
src/f1sim/eval/: __init__.py  __main__.py  metrics.py  report.py
src/f1sim/ground_truth/: __init__.py  __main__.py  team_calls.py
src/f1sim/ingest/: __init__.py  __main__.py  fastf1_connector.py
src/f1sim/metrics/: __init__.py  delta_time.py
src/f1sim/models/: __init__.py  config.py  v0.py
src/f1sim/rules/: __init__.py  rules_engine.py
src/f1sim/state/: __init__.py  engine.py  models.py
src/f1sim/ui/: __init__.py  service.py
tests/: test_delta_time.py  test_eval.py  test_explainer.py  test_ground_truth.py  test_ingest.py  test_models.py  test_rules.py  test_smoke.py  test_state_engine.py  test_strategy.py  test_ui_service.py
