[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1sim"
version = "0.0.1"
description = "Replay-only Formula 1 strategy simulator scaffold."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastf1>=3.4",
    "streamlit>=1.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11.0",
]

[project.scripts]
f1sim-smoke = "f1sim.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
